Fixed overflow of channels and dms list

--- a/app/assets/stylesheets/main-page.css
+++ b/app/assets/stylesheets/main-page.css
@@ -22,6 +22,7 @@
     height: 100vh;
     background-color: #4D394B;
     min-width: 184px;
+    overflow-y: scroll;
   }
 
   .main-right{
@@ -109,6 +110,9 @@ input{
 
 }
 
+.dms-list-div{
+  padding-bottom: 30px;
+}
 
 .chat-sub{
   padding: 13px;
